k8s_manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: workshop
  labels:
    role: backend
    env: demo    
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
    spec: 
      containers:
      - name: backend
        image: public.ecr.aws/l0l7e4u1/3-tier-backend:latest
        imagePullPolicy: Always 
        ports:  
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /ok
            port: 8080
          intialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet: 
            path: /ok
            port: 8080
          intialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
