k8s_manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: workshop
  labels:
    role: frontend
    env: dev

spec: 
  replicas: 1
  strategy:
    type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 25%
  selector:
    mactchLabels:
      role: frontend
  template:
    metadata:
      labels: 
        role: frontend
    spec: 
      containers:
      - name: frontend
        image: public.ecr.aws/l0l7e4u1/3-tier-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
