k8s_manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: workshop
spec:
  selector:
    role: backend
  ports:
  - port: 8080
    type: ClusterIp
