k8s_manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: workshop
spec:
  selector:
    role: frontend 
  ports:
  - port: 3000
    type: ClusterIp
